--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Filmlane</title>
 
-    <link rel="stylesheet" href="./styles.css" />
+    <link rel="stylesheet" href="./assets/css/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -14,10 +14,16 @@
       rel="stylesheet"
     />
 
-    <link rel="stylesheet" href="./global.css" />
+    <link rel="stylesheet" href="./assets/css/global.css" />
   </head>
   <body>
-    <header>HEADER</header>
+    <header id="header">
+      <div class="header_logo">
+        <img src="./assets/icons/logo.svg" alt="" />
+      </div>
+      <div class="header_navbar"></div>
+      <div class="header_actions"></div>
+    </header>
     <main></main>
     <footer>FOOTER</footer>
   </body>
