--- a/src/movie_detail.html
+++ b/src/movie_detail.html
@@ -14,11 +14,56 @@
     rel="stylesheet" />
 
   <link rel="stylesheet" href="./assets/css/global.css" />
-</head>
-</head>
+  <link rel="stylesheet" href="./assets/css/movie_detail.css" />
+
+
 
 <body>
-  <p> cho thang ngu</p>
+  <header id="header">
+    <div class="container">
+      <div class="header_logo">
+        <img src="./assets/icons/logo.svg" alt="" class="logo" />
+      </div>
+      <div class="header_navbar">
+        <a href="#">HOME</a>
+        <a href="#">MOVIE</a>
+        <a href="#">TV SHOW</a>
+        <a href="#">WEB SERIES</a>
+        <a href="#">PRICING</a>
+      </div>
+      <div class="header_actions">
+        <img src="./assets/icons/icon_search.svg" alt="" class="icon_search" />
+        <div class="divider"></div>
+        <div class="select_country_wrapper">
+          <img src="./assets//icons/icon_earth.svg" alt="" class="icon_earth" />
+          <select name="Select Country" id="select_country">
+            <option value="en">EN</option>
+            <option value="au">AU</option>
+            <option value="ar">AR</option>
+            <option value="tu">TU</option>
+          </select>
+        </div>
+        <button class="btn_outline">SIGN IN</button>
+      </div>
+    </div>
+  </header>
+  <main>
+    <section class="movie-detail">
+        <div class="container">
+          <div class="movie-detail-banner">
+            <img src="assets/images/movie-4.png" alt="">
+
+          </div>
+
+          <div class="movie-detail-content">
+
+          </div>
+        </div>
+    </section>
+  </main>
+
+  <footer></footer>
+  <script src="./assets/js/global.js"></script>
 </body>
 
 </html>
