- Update UI homepage

--- a/src/index.html
+++ b/src/index.html
@@ -54,7 +54,7 @@
       </div>
     </header>
     <main>
-      <div class="section_hero">
+      <section class="section_hero">
         <div class="container">
           <div class="section_hero_container">
             <p class="hero_subtitle">Filmlane</p>
@@ -65,11 +65,158 @@
             <div class="hero_des">
               <div class="badge_fill">PG 18</div>
               <div class="badge_outline">HD</div>
+              <a href="#">Romance,</a>
+              <a href="#">Drama</a>
+
+              <div class="calendar_des">
+                <img src="./assets/icons/calendar.svg" alt="" />
+                <p>2022</p>
+              </div>
+
+              <div class="time_des">
+                <img src="./assets/icons/icon_clock.svg" alt="" />
+                <p>128 min</p>
+              </div>
             </div>
             <button class="btn_outline">WATCH NOW</button>
           </div>
         </div>
-      </div>
+      </section>
+
+      <section class="section_upcoming">
+        <div class="container">
+          <div class="upcoming_title">
+            <div class="upcoming_left">
+              <p class="upcoming_left_subtitle">ONLINE STREAMING</p>
+              <p class="upcoming_left_title">Upcoming Movies</p>
+            </div>
+            <div class="upcoming_right">
+              <button class="btn_filter">Movies</button>
+              <button class="btn_filter">TV Shows</button>
+              <button class="btn_filter">Anime</button>
+            </div>
+          </div>
+
+          <div class="upcoming_content">
+            <div class="movie_item">
+              <a href="#">
+                <img
+                  src="./assets/images/upcoming-1.png"
+                  alt=""
+                  class="movie_item_img"
+                />
+              </a>
+
+              <div class="movie_title_wrapper">
+                <a href="#" class="movie_title">The Northman</a>
+                <p class="movie_time">2022</p>
+              </div>
+
+              <div class="movie_meta">
+                <div class="badge_outline">HD</div>
+
+                <div class="movie_meta_right">
+                  <div class="movie_meta_duration">
+                    <img src="" alt="" />
+                    <p>137 min</p>
+                  </div>
+                  <div class="movie_meta_rate">
+                    <img src="" alt="" />
+                    <p>8.5</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="movie_item">
+              <a href="#">
+                <img
+                  src="./assets/images/upcoming-1.png"
+                  alt=""
+                  class="movie_item_img"
+                />
+              </a>
+
+              <div class="movie_title_wrapper">
+                <a href="#" class="movie_title">The Northman</a>
+                <p class="movie_time">2022</p>
+              </div>
+
+              <div class="movie_meta">
+                <div class="badge_outline">HD</div>
+
+                <div class="movie_meta_right">
+                  <div class="movie_meta_duration">
+                    <img src="" alt="" />
+                    <p>137 min</p>
+                  </div>
+                  <div class="movie_meta_rate">
+                    <img src="" alt="" />
+                    <p>8.5</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="movie_item">
+              <a href="#">
+                <img
+                  src="./assets/images/upcoming-1.png"
+                  alt=""
+                  class="movie_item_img"
+                />
+              </a>
+
+              <div class="movie_title_wrapper">
+                <a href="#" class="movie_title">The Northman</a>
+                <p class="movie_time">2022</p>
+              </div>
+
+              <div class="movie_meta">
+                <div class="badge_outline">HD</div>
+
+                <div class="movie_meta_right">
+                  <div class="movie_meta_duration">
+                    <img src="" alt="" />
+                    <p>137 min</p>
+                  </div>
+                  <div class="movie_meta_rate">
+                    <img src="" alt="" />
+                    <p>8.5</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="movie_item">
+              <a href="#">
+                <img
+                  src="./assets/images/upcoming-1.png"
+                  alt=""
+                  class="movie_item_img"
+                />
+              </a>
+
+              <div class="movie_title_wrapper">
+                <a href="#" class="movie_title">The Northman</a>
+                <p class="movie_time">2022</p>
+              </div>
+
+              <div class="movie_meta">
+                <div class="badge_outline">HD</div>
+
+                <div class="movie_meta_right">
+                  <div class="movie_meta_duration">
+                    <img src="" alt="" />
+                    <p>137 min</p>
+                  </div>
+                  <div class="movie_meta_rate">
+                    <img src="" alt="" />
+                    <p>8.5</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <footer>FOOTER</footer>
     <script src="./assets/js/global.js"></script>
