do detail-content

--- a/src/movie_detail.html
+++ b/src/movie_detail.html
@@ -56,7 +56,33 @@
           </div>
 
           <div class="movie-detail-content">
-
+              <h1 class="detail-title">Free Guy</h1>
+            <div class="hero_des">
+              <div class="badge_fill">PG 18</div>
+              <div class="badge_outline">HD</div>
+              <a href="#">Comedy,</a>
+              <a href="#">Action,</a>
+              <a href="#">Adventure,</a>
+              <a href="#">Science Fiction</a>
+            
+              <div class="calendar_des">
+                <img src="./assets/icons/calendar.svg" alt="" />
+                <p>2022</p>
+              </div>
+            
+              <div class="time_des">
+                <img src="./assets/icons/icon_clock.svg" alt="" />
+                <p>128 min</p>
+              </div>
+            </div>
+              <p class="detail-subtitle">New Episodes</p>
+              <p class="storyline">A bank teller called Guy realizes he is a background character in an open world video game called Free
+              City that will
+              soon go offline.</p>
+              <div class="details-actions"></div>
+              <button>
+                <a href="">#</a>
+              </button>
           </div>
         </div>
     </section>
