- Update UI movie item

--- a/src/index.html
+++ b/src/index.html
@@ -99,7 +99,7 @@
 
           <div class="upcoming_content">
             <div class="movie_item">
-              <a href="#">
+              <a href="#" class="movie_item_link">
                 <img
                   src="./assets/images/upcoming-1.png"
                   alt=""
@@ -117,18 +117,27 @@
 
                 <div class="movie_meta_right">
                   <div class="movie_meta_duration">
-                    <img src="" alt="" />
+                    <img
+                      src="./assets/icons/icon_clock.svg"
+                      alt=""
+                      style="width: 13px; height: 13px"
+                    />
                     <p>137 min</p>
                   </div>
                   <div class="movie_meta_rate">
-                    <img src="" alt="" />
+                    <img
+                      src="./assets/icons/star-fill.svg"
+                      alt=""
+                      style="width: 13px; height: 13px"
+                    />
                     <p>8.5</p>
                   </div>
                 </div>
               </div>
             </div>
+
             <div class="movie_item">
-              <a href="#">
+              <a href="#" class="movie_item_link">
                 <img
                   src="./assets/images/upcoming-1.png"
                   alt=""
@@ -146,18 +155,27 @@
 
                 <div class="movie_meta_right">
                   <div class="movie_meta_duration">
-                    <img src="" alt="" />
+                    <img
+                      src="./assets/icons/icon_clock.svg"
+                      alt=""
+                      style="width: 13px; height: 13px"
+                    />
                     <p>137 min</p>
                   </div>
                   <div class="movie_meta_rate">
-                    <img src="" alt="" />
+                    <img
+                      src="./assets/icons/star-fill.svg"
+                      alt=""
+                      style="width: 13px; height: 13px"
+                    />
                     <p>8.5</p>
                   </div>
                 </div>
               </div>
             </div>
+
             <div class="movie_item">
-              <a href="#">
+              <a href="#" class="movie_item_link">
                 <img
                   src="./assets/images/upcoming-1.png"
                   alt=""
@@ -175,18 +193,27 @@
 
                 <div class="movie_meta_right">
                   <div class="movie_meta_duration">
-                    <img src="" alt="" />
+                    <img
+                      src="./assets/icons/icon_clock.svg"
+                      alt=""
+                      style="width: 13px; height: 13px"
+                    />
                     <p>137 min</p>
                   </div>
                   <div class="movie_meta_rate">
-                    <img src="" alt="" />
+                    <img
+                      src="./assets/icons/star-fill.svg"
+                      alt=""
+                      style="width: 13px; height: 13px"
+                    />
                     <p>8.5</p>
                   </div>
                 </div>
               </div>
             </div>
+
             <div class="movie_item">
-              <a href="#">
+              <a href="#" class="movie_item_link">
                 <img
                   src="./assets/images/upcoming-1.png"
                   alt=""
@@ -204,11 +231,19 @@
 
                 <div class="movie_meta_right">
                   <div class="movie_meta_duration">
-                    <img src="" alt="" />
+                    <img
+                      src="./assets/icons/icon_clock.svg"
+                      alt=""
+                      style="width: 13px; height: 13px"
+                    />
                     <p>137 min</p>
                   </div>
                   <div class="movie_meta_rate">
-                    <img src="" alt="" />
+                    <img
+                      src="./assets/icons/star-fill.svg"
+                      alt=""
+                      style="width: 13px; height: 13px"
+                    />
                     <p>8.5</p>
                   </div>
                 </div>
