- Responsive Homepage, Header, Footer

--- a/src/index.html
+++ b/src/index.html
@@ -31,18 +31,35 @@
         <a href="#">PRICING</a>
       </div>
       <div class="header_actions">
-        <img src="./assets/icons/icon_search.svg" alt="" class="icon_search" />
-        <div class="divider"></div>
-        <div class="select_country_wrapper">
-          <img src="./assets//icons/icon_earth.svg" alt="" class="icon_earth" />
-          <select name="Select Country" id="select_country">
-            <option value="en">EN</option>
-            <option value="au">AU</option>
-            <option value="ar">AR</option>
-            <option value="tu">TU</option>
-          </select>
+        <div class="header_actions_list">
+          <img src="./assets/icons/icon_search.svg" alt="" class="icon_search" />
+          <div class="divider"></div>
+          <div class="select_country_wrapper">
+            <img src="./assets//icons/icon_earth.svg" alt="" class="icon_earth" />
+            <select name="Select Country" id="select_country">
+              <option value="en">EN</option>
+              <option value="au">AU</option>
+              <option value="ar">AR</option>
+              <option value="tu">TU</option>
+            </select>
+          </div>
         </div>
         <button class="btn_outline">SIGN IN</button>
+        <img src="./assets/icons/hamburger.svg" alt="" class="hamburger_nav" style="width: 40px; height: 40px;">
+      </div>
+
+      <div class="header_navbar_mobile">
+        <div class="header_navbar_mobile_top">
+          <img src="./assets/icons/logo.svg" alt="">
+          <img src="./assets/icons/close.svg" alt="" class="close_navbar_mobile">
+        </div>
+        <div class="header_navbar_mobile_content">
+          <a href="#">HOME</a>
+          <a href="#">MOVIE</a>
+          <a href="#">TV SHOW</a>
+          <a href="#">WEB SERIES</a>
+          <a href="#">PRICING</a>
+        </div>
       </div>
     </div>
   </header>
@@ -640,6 +657,8 @@
       </div>
     </section>
   </footer>
+  <div class="overlay"></div>
+
   <script src="./assets/js/global.js"></script>
 </body>
 
