- Complete prices page

--- a/src/index.html
+++ b/src/index.html
@@ -45,10 +45,8 @@
           </div>
         </div>
         <button class="btn_outline btn_signIn">SIGN IN</button>
-        <img src="./assets/icons/hamburger.svg" alt="" class="hamburger_nav" style="width: 40px; height: 40px;">
+        <img src="./assets/icons/hamburger.svg" alt="" class="hamburger_nav" style="width: 40px; height: 40px" />
       </div>
-
-
     </div>
   </header>
   <main>
@@ -616,7 +614,7 @@
     <section class="footer_top">
       <div class="container">
         <div class="footer_top_brand">
-          <img src="./assets/icons/logo.svg" alt="">
+          <img src="./assets/icons/logo.svg" alt="" />
           <div class="footer_top_brand_link">
             <a href="">HOME</a>
             <a href="">MOVIE</a>
@@ -640,7 +638,7 @@
           <p>© 2023</p>
         </div>
         <div class="footer_bottom_right">
-          <img src="./assets/images/footer-bottom-img.png" alt="">
+          <img src="./assets/images/footer-bottom-img.png" alt="" />
         </div>
       </div>
     </section>
@@ -648,8 +646,8 @@
   <div class="overlay"></div>
   <div class="header_navbar_mobile">
     <div class="header_navbar_mobile_top">
-      <img src="./assets/icons/logo.svg" alt="">
-      <img src="./assets/icons/close.svg" alt="" class="close_navbar_mobile">
+      <img src="./assets/icons/logo.svg" alt="" />
+      <img src="./assets/icons/close.svg" alt="" class="close_navbar_mobile" />
     </div>
     <div class="header_navbar_mobile_content">
       <a href="#">HOME</a>
@@ -664,8 +662,8 @@
     <div class="sign_in_container">
       <div class="sign_in_left">
         <form action="" id="form_signIn">
-          <input type="email" id="email_input" placeholder="Email">
-          <input type="password" id="password_input" placeholder="Password">
+          <input type="email" id="email_input" placeholder="Email" />
+          <input type="password" id="password_input" placeholder="Password" />
           <p>Don’t have account? <span class="nav_sign_up">Sign up</span></p>
 
           <button class="btn_outline" type="submit">Sign in</button>
@@ -685,9 +683,9 @@
     <div class="sign_up_container">
       <div class="sign_up_left">
         <form action="" id="form_signUp">
-          <input type="email" id="email_input" placeholder="Email">
-          <input type="password" id="password_input" placeholder="Password">
-          <input type="password" id="confirm_password_input" placeholder="Confirm Password">
+          <input type="email" id="email_input" placeholder="Email" />
+          <input type="password" id="password_input" placeholder="Password" />
+          <input type="password" id="confirm_password_input" placeholder="Confirm Password" />
           <p>Has account? <span class="nav_sign_in"> Sign in</span></p>
 
           <button class="btn_outline" type="submit">Sign Up</button>
