--- a/src/TVShow.html
+++ b/src/TVShow.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Movie</title>
+    <title>TV Show</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -55,7 +55,7 @@
 
     <main>
         <section class="Movie">
-            <h1>MOVIE</h1>
+            <h1>TVShow</h1>
         </section>
 
         <section class="section_series">
